--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Logan Linn">
 
   
-  <meta name="description" content="As my friends are aware, I love Ruby [1]. I was,and still am, hungry to write more of it.  Shortly after putting up mywimpy Rails app for blogging,...">
+  <meta name="description" content="As my friends are aware, I love Ruby [1]. I was,and still am, hungry to write more of it.  Shortly after putting up mywimpy Rails app for blogging, I &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -53,7 +53,6 @@
 <ul class="main-navigation">
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
-  <li><a href="}/projects">Projects</a></li>
 </ul>
 
 </nav>
@@ -175,6 +174,13 @@ sometime.</em></p>
 <aside class="sidebar">
   
     <section>
+  <h1>About Me</h1>
+  <p>
+    Logan Linn is a Software Engineer at <a href="http://www.huddler.com">Huddler.com</a>
+    and a founder of <a href="http://www.skill-capped.com">Skill-Capped</a>.
+  </p>
+</section>
+<section>
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
     
@@ -207,7 +213,7 @@ sometime.</em></p>
 </section>
 
 
-
+Included file &#8216;asides/googleplus.html&#8217; not found in _includes directory
   
 </aside>
 
@@ -231,14 +237,6 @@ sometime.</em></p>
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-
-  <script type="text/javascript">
-    (function() {
-      var script = document.createElement('script'); script.type = 'text/javascript'; script.async = true;
-      script.src = 'https://apis.google.com/js/plusone.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(script, s);
-    })();
-  </script>
 
 
 
